Insurance included UI Polish.

--- a/project/src/main/res/layout/car_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/car_checkout_summary_widget.xml
@@ -11,8 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp"
-        android:paddingLeft="14dp"
-        android:paddingRight="16dp"
         android:paddingTop="14dp">
 
         <LinearLayout
@@ -20,6 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:paddingLeft="14dp"
+            android:paddingRight="16dp"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
@@ -75,11 +75,29 @@
                 android:textColor="@color/cars_checkout_text_color"
                 android:textSize="12sp" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/info_block"
+            android:orientation="vertical"
+            android:paddingTop="8dp">
+
+            <View
+                android:id="@+id/divider_line"
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#E2E2E2"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="8dp">
+                android:paddingTop="8dp"
+                android:paddingLeft="14dp"
+                android:paddingRight="16dp">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/ticked_info_text_1"
@@ -108,13 +126,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="12dp"
+                android:paddingLeft="14dp"
                 android:drawableLeft="@drawable/check"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
+                android:paddingTop="8dp"
                 android:textColor="@color/cars_checkout_text_color"
-                android:visibility="gone"
                 android:textSize="12sp"
-                android:paddingTop="8dp" />
+                android:visibility="gone" />
 
         </LinearLayout>
 
@@ -125,6 +144,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignRight="@+id/due_at_text"
             android:text="@string/total_with_tax"
+            android:paddingRight="16dp"
             android:textColor="@color/cars_checkout_text_color"
             android:textSize="11sp" />
 
@@ -133,6 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:paddingRight="16dp"
             android:layout_below="@+id/grand_total_text"
             android:drawablePadding="6dp"
             android:drawableRight="@drawable/info"
@@ -147,6 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:paddingRight="16dp"
             android:layout_below="@+id/price_text"
             android:textColor="@color/cars_checkout_text_color"
             android:textSize="11sp" />
