4672 Cleanup UI and integrate Omniture in LeanPlum template

--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -286,4 +286,5 @@
     <color name="lx_sort_filter_top_bar_text_color">#5C5C5C</color>
     <color name="lx_sort_filter_pressed_row_color">#D8D8D8</color>
 
+    <color name="leanplum_dialog_button_color">#fc2176</color>
 </resources>
