--- a/project/src/main/res/layout/leanplum_dialog.xml
+++ b/project/src/main/res/layout/leanplum_dialog.xml
@@ -1,53 +1,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/leanplum_dialog_image_width"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/leanplumtemplate_background"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/leanplum_dialog_image_height"
         android:adjustViewBounds="true"
         android:background="@android:color/background_light"
         android:contentDescription="@string/app_name"
-        android:scaleType="center"
-        android:src="@drawable/ic_logo_flights" />
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="0dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp">
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="24dp">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/leanplumtemplate_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/background_light"
-            android:fontFamily="sans-serif-light"
-            android:paddingBottom="20dp"
-            android:textColor="@color/light_gray"
-            android:textSize="26sp"
-            android:textStyle="bold" />
+            android:paddingBottom="16dp"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:textStyle="medium" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/leanplumtemplate_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/background_light"
-            android:fontFamily="sans-serif"
-            android:paddingBottom="20dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="22sp" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="0.9dp"
-            android:background="@android:color/darker_gray"
-            android:visibility="visible" />
+            android:textColor="#757575"
+            android:textSize="16sp"/>
     </LinearLayout>
 </LinearLayout>
