--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -320,4 +320,19 @@
 
     <attr name="skin_launchTabIndicatorColor" format="reference|color" />
     <attr name="skin_launchActionBarBackgroundColor" format="reference|color" />
+
+    <!-- Cars -->
+    <attr name="skin_carsPrimaryColor" format="reference|color" />
+    <attr name="skin_carsSecondaryColor" format="reference|color" />
+    <attr name="skin_carsTooltipColor" format="reference|color" />
+    <attr name="skin_carsStatusBarColor" format="reference|color" />
+    <attr name="skin_carsSortButtonSelectorDrawable" format="reference" />
+    <attr name="skin_carsSortButtonTextSelectorDrawable" format="reference" />
+    <attr name="skin_carsFilterNumberBgDrawable" format="reference" />
+    <attr name="skin_carsToogleBackgroundSelectorDrawable" format="reference" />
+    <attr name="skin_carsLoginBrandLogoDrawable" format="reference" />
+    <attr name="skin_costSummaryAlertDrawable" format="reference" />
+    <attr name="skin_carsLoginBookNowButtonDrawable" format="reference" />
+    <attr name="skin_carsLoginButtonColor" format="reference|color" />
+    <attr name="skin_carsLoginBrandIconDrawable" format="reference" />
 </resources>
