--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -55,7 +55,7 @@
         android:id="@+id/toolbar_background"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/cars_primary_color" />
+        android:background="?attr/skin_carsPrimaryColor" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -127,7 +127,7 @@
                 android:id="@+id/filter_number_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/filter_number_bg"
+                android:background="?attr/skin_carsFilterNumberBgDrawable"
                 android:paddingBottom="1dp"
                 android:paddingLeft="5.5dp"
                 android:paddingRight="5.5dp"
