--- a/project/src/main/res/layout/cost_summary_alert.xml
+++ b/project/src/main/res/layout/cost_summary_alert.xml
@@ -21,5 +21,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@drawable/border_horizontal_expedia_striped" />
+        android:background="?attr/skin_costSummaryAlertDrawable" />
 </LinearLayout>
