--- a/project/src/main/res/layout/section_cars_category_filter_row.xml
+++ b/project/src/main/res/layout/section_cars_category_filter_row.xml
@@ -22,6 +22,6 @@
         android:id="@+id/category_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/cars_primary_color" />
+        android:textColor="?attr/skin_carsPrimaryColor" />
 
 </com.expedia.bookings.widget.CarsCategoryFilterWidget>
