--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.hotel.HotelPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hotel_presenter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,5 +13,10 @@
         android:layout_height="match_parent"
         android:visibility="visible"/>
 
+    <com.expedia.bookings.presenter.hotel.HotelResultsPresenter
+        android:id="@+id/widget_hotel_results"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
