4202 Updating UI for travelers selection in hotels

--- a/project/src/main/res/layout/toolbar_checkmark_item.xml
+++ b/project/src/main/res/layout/toolbar_checkmark_item.xml
@@ -10,5 +10,4 @@
     android:drawablePadding="10dp"
     android:textAllCaps="true"
     android:text="@string/search"
-    android:textSize="14sp"
-    android:textColor="#FFFFFF" />
+    android:textSize="14sp" />
