--- a/project/src/main/res/layout/calendar_cars_lx_layout.xml
+++ b/project/src/main/res/layout/calendar_cars_lx_layout.xml
@@ -56,6 +56,7 @@
         android:id="@+id/month"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textStyle="bold" />
 
 </merge>
