--- a/project/src/main/res/menu/cars_search_menu.xml
+++ b/project/src/main/res/menu/cars_search_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/menu_check"
         android:icon="@drawable/ic_check_white_24dp"
-        app:showAsAction="always|withText"
-        android:title="@string/search" />
+        android:title="@string/search"
+        app:showAsAction="always|withText" />
 
 </menu>
