--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -292,4 +292,9 @@
     <!-- Dimensions for leanplum in app message templates -->
     <dimen name="leanplum_dialog_image_width">280dp</dimen>
     <dimen name="leanplum_dialog_image_height">157dp</dimen>
+
+    <!-- Dimensions for Hotel Traveler Table -->
+    <dimen name="hotel_traveler_table_margin">24dp</dimen>
+    <dimen name="hotel_traveler_padding">28dp</dimen>
+    <dimen name="hotel_traveler_plus_minus_size">40dp</dimen>
 </resources>
