TVLY phone: updated layout colors and drawables with attr in lx path.

--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -130,7 +130,7 @@
         android:id="@+id/toolbar_background"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/lx_primary_color" />
+        android:background="?attr/skin_lxPrimaryColor" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
