--- a/project/src/main/res/layout/lx_dropdown_item.xml
+++ b/project/src/main/res/layout/lx_dropdown_item.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/lx_dropdown_imageView"
-        android:textColor="@color/lx_primary_color"/>
+        android:textColor="?attr/skin_lxPrimaryColor"/>
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/city_name_textView"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/display_name_textView"
         android:layout_below="@+id/display_name_textView"
-        android:textColor="@color/lx_primary_color"
+        android:textColor="?attr/skin_lxPrimaryColor"
         android:textSize="12sp"/>
 
 </RelativeLayout>
