--- a/project/src/main/res/layout/lx_search_params_presenter.xml
+++ b/project/src/main/res/layout/lx_search_params_presenter.xml
@@ -14,7 +14,7 @@
             android:id="@+id/search_params_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/lx_primary_color"
+            android:background="?attr/skin_lxPrimaryColor"
             android:orientation="vertical">
 
             <LinearLayout
@@ -68,7 +68,7 @@
                 android:gravity="left|center_vertical"
                 android:paddingLeft="20dp"
                 android:textAllCaps="false"
-                android:textColor="@drawable/lx_text_selector"
+                android:textColor="?attr/skin_lxTextSelectorDrawable"
                 android:textOff="@string/select_lx_search_dates"
                 android:textOn="@string/select_lx_search_dates"
                 android:textSize="15sp"
@@ -94,17 +94,17 @@
                 android:background="@android:color/white"
                 android:paddingBottom="8dp"
                 app:calendarDaySelectionFillColor="@android:color/white"
-                app:calendarDaysOfWeekColor="@color/lx_primary_color"
-                app:calendarHeaderTextColor="@color/lx_primary_color"
+                app:calendarDaysOfWeekColor="?attr/skin_lxPrimaryColor"
+                app:calendarHeaderTextColor="?attr/skin_lxPrimaryColor"
                 app:calendarHeaderTextSize="16dp"
-                app:calendarHighlightColor="@color/lx_primary_color"
-                app:calendarHighlightInverseColor="@color/lx_primary_color"
-                app:calendarTodayColor="@color/lx_primary_color"
+                app:calendarHighlightColor="?attr/skin_lxPrimaryColor"
+                app:calendarHighlightInverseColor="?attr/skin_lxPrimaryColor"
+                app:calendarTodayColor="?attr/skin_lxPrimaryColor"
                 app:calendarInvalidDaysColor="@color/lx_invalid_days_calendar"
                 app:calendarLayout="@layout/calendar_cars_lx_layout"
                 app:calendarBaseColor="@color/lx_valid_days_calendar"
                 app:calendarSecondaryColor="@color/lx_valid_days_calendar"
-                app:calendarWeekSelectionColor="@color/lx_primary_color"
+                app:calendarWeekSelectionColor="?attr/skin_lxPrimaryColor"
                 />
         </LinearLayout>
 
