--- a/project/src/main/res/layout/lx_ticket_picker.xml
+++ b/project/src/main/res/layout/lx_ticket_picker.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center"
-        android:src="@drawable/lx_ticket_minus_button_selector" />
+        android:src="?attr/skin_lxTicketMinusButtonSelectorDrawable" />
 
     <TextView
         android:id="@+id/ticket_count"
@@ -31,7 +31,7 @@
         android:layout_gravity="center"
         android:layout_weight="0.3"
         android:gravity="center"
-        android:textColor="@color/lx_primary_color"
+        android:textColor="?attr/skin_lxPrimaryColor"
         android:textSize="16dp" />
 
     <ImageButton
@@ -40,6 +40,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center"
-        android:src="@drawable/lx_ticket_plus_button_selector" />
+        android:src="?attr/skin_lxTicketPlusButtonSelectorDrawable" />
 
 </com.expedia.bookings.widget.LXTicketPicker>
