--- a/project/src/main/res/layout/show_more_with_count_layout.xml
+++ b/project/src/main/res/layout/show_more_with_count_layout.xml
@@ -6,7 +6,7 @@
         android:id="@+id/more_offer_count"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/lx_show_more_background"
+        android:background="?attr/skin_lxShowMoreBackgroundDrawable"
         android:gravity="center"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:paddingLeft="4dp"
         android:text="@string/lx_show_more_offers"
-        android:textColor="@color/lx_primary_color"
+        android:textColor="?attr/skin_lxPrimaryColor"
         android:gravity="center"
         android:textSize="15sp"
         app:textStyle="medium" />
