--- a/project/src/main/res/layout/widget_lx_sort_filter.xml
+++ b/project/src/main/res/layout/widget_lx_sort_filter.xml
@@ -58,7 +58,7 @@
                 android:paddingRight="@dimen/lx_sort_filter_padding"
                 android:includeFontPadding="false"
                 android:text="@string/lx_sort_by"
-                android:textColor="@color/lx_primary_color" />
+                android:textColor="?attr/skin_lxPrimaryColor" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -79,20 +79,20 @@
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"
-                        android:background="@drawable/lx_sort_button_selector"
+                        android:background="?attr/skin_lxSortButtonSelectorDrawable"
                         android:text="@string/lx_price_sort_button"
                         android:textAllCaps="false"
-                        android:textColor="@drawable/lx_sort_button_text_selector" />
+                        android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
 
                     <Button
                         android:id="@+id/popularity_sort_button"
                         android:layout_width="0dp"
                         android:layout_height="40dp"
                         android:layout_weight="1"
-                        android:background="@drawable/lx_sort_button_selector"
+                        android:background="?attr/skin_lxSortButtonSelectorDrawable"
                         android:text="@string/lx_popularity_sort_button"
                         android:textAllCaps="false"
-                        android:textColor="@drawable/lx_sort_button_text_selector" />
+                        android:textColor="?attr/skin_lxSortButtonTextSelectorDrawable" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -103,7 +103,7 @@
                 android:paddingLeft="@dimen/lx_sort_filter_padding"
                 android:paddingRight="@dimen/lx_sort_filter_padding"
                 android:text="@string/lx_categories"
-                android:textColor="@color/lx_primary_color" />
+                android:textColor="?attr/skin_lxPrimaryColor" />
 
             <LinearLayout
                 android:id="@+id/filter_categories"
