--- a/project/src/main/res/values-v21/styles_cars.xml
+++ b/project/src/main/res/values-v21/styles_cars.xml
@@ -27,9 +27,9 @@
     </style>
 
     <style name="Theme.AlertDialog" parent="android:Theme.Material.Light.Dialog.Alert">
-        <item name="android:colorPrimary">@color/cars_primary_color</item>
-        <item name="android:colorPrimaryDark">@color/cars_primary_color</item>
-        <item name="android:colorAccent">@color/cars_primary_color</item>
+        <item name="android:colorPrimary">?attr/skin_carsPrimaryColor</item>
+        <item name="android:colorPrimaryDark">?attr/skin_carsPrimaryColor</item>
+        <item name="android:colorAccent">?attr/skin_carsPrimaryColor</item>
     </style>
 
 </resources>
