--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -17,6 +17,7 @@
         android:id="@+id/widget_hotel_results"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#EAEAEA"
         android:visibility="gone"/>
 
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
