--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -216,6 +216,12 @@
         <item name="android:maxHeight">12dp</item>
     </style>
 
+    <style name="RatingBar.UserReview.Material">
+        <item name="android:progressDrawable">@drawable/ratingbar_star_material</item>
+        <item name="android:minHeight">14dp</item>
+        <item name="android:maxHeight">14dp</item>
+    </style>
+
     <style name="RatingBar.UserReview.Yellow" />
 
     <style name="RatingBar.UserReview.White">
