--- a/project/src/main/res/layout/fragment_slide_to_purchase.xml
+++ b/project/src/main/res/layout/fragment_slide_to_purchase.xml
@@ -83,6 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:textColor="@color/slide_to_purchase_text"
             android:textSize="@dimen/slide_to_purchase_price_text_size" />
     </LinearLayout>
