Remove usage of Utils GridLayout

--- a/project/src/main/res/layout/fragment_tablet_hotel_reviews.xml
+++ b/project/src/main/res/layout/fragment_tablet_hotel_reviews.xml
@@ -86,7 +86,7 @@
                     android:layout_height="56dp"
                     android:orientation="horizontal" >
 
-                    <com.gridlayout.Space
+                    <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
@@ -103,7 +103,7 @@
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
-                    <com.gridlayout.Space
+                    <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
@@ -120,7 +120,7 @@
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
-                    <com.gridlayout.Space
+                    <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
@@ -137,7 +137,7 @@
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
-                    <com.gridlayout.Space
+                    <Space
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1" />
