--- a/project/src/main/res/layout/fragment_flight_search_params.xml
+++ b/project/src/main/res/layout/fragment_flight_search_params.xml
@@ -202,6 +202,7 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
+                android:id="@+id/infant_preference_seating_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
