--- a/project/src/main/res/layout-sw600dp/fragment_tablet_hotel_details.xml
+++ b/project/src/main/res/layout-sw600dp/fragment_tablet_hotel_details.xml
@@ -187,12 +187,12 @@
                 android:visibility="gone">
 
                 <com.expedia.bookings.widget.TextView
+                    android:id="@+id/all_rooms_sold_out"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_tablet_sold_out_hotel_details"
                     android:drawablePadding="8dp"
                     android:layout_gravity="center"
-                    android:text="?attr/skin_sorryRoomsSoldOut"
                     android:textColor="#5e6b7a"
                     android:textSize="16dp"
                     app:textStyle="light"/>
