--- a/project/src/main/res/layout/section_hotel_edit_traveler_pt1.xml
+++ b/project/src/main/res/layout/section_hotel_edit_traveler_pt1.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.SectionTravelerInfo xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -15,27 +14,25 @@
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:alignmentMode="alignMargins"
-        android:columnCount="3"
-        android:columnOrderPreserved="false"
-        android:useDefaultMargins="false"
-        tools:ignore="RequiredSize" >
+        app:alignmentMode="alignMargins"
+        app:columnCount="3"
+        app:columnOrderPreserved="false"
+        app:useDefaultMargins="false" >
 
         <com.expedia.bookings.widget.TelephoneSpinner
             android:id="@+id/edit_phone_number_country_code_spinner"
             style="@style/Widget.Spinner.Phone.Dark"
             android:layout_width="100dp"
-            android:layout_columnSpan="1" />
+            app:layout_columnSpan="1" />
 
         <EditText
             android:id="@+id/edit_phone_number"
             android:layout_width="0dp"
-            android:layout_gravity="center_vertical|fill_horizontal"
-            android:layout_columnSpan="2"
             android:hint="@string/phone_number_hint"
             android:inputType="phone"
             android:singleLine="true"
-            tools:ignore="RequiredSize" />
+            app:layout_gravity="center_vertical|fill_horizontal"
+            app:layout_columnSpan="2" />
 
     </android.support.v7.widget.GridLayout>
 
