s/4579 show suggestions from v4 for material design hotel.

--- a/project/src/main/res/layout/hotel_dropdown_item.xml
+++ b/project/src/main/res/layout/hotel_dropdown_item.xml
@@ -16,6 +16,17 @@
         android:paddingLeft="9dp"
         android:src="@drawable/ic_suggest_current_location" />
 
+    <ImageView
+        android:id="@+id/hotel_group_imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="11dp"
+        android:layout_marginLeft="40dp"
+        android:visibility="gone"
+        android:paddingLeft="9dp"
+        android:src="@drawable/neighborhood_arrow" />
+
     <com.expedia.bookings.widget.TextView
         android:id="@+id/display_name_textView"
         android:layout_width="wrap_content"
