--- a/project/src/main/res/layout/toolbar_checkmark_item.xml
+++ b/project/src/main/res/layout/toolbar_checkmark_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/CarRobotoFont"
+    android:id="@+id/search_btn"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:background="?android:attr/selectableItemBackground"
