--- a/project/src/travelocity/res/values/colors.xml
+++ b/project/src/travelocity/res/values/colors.xml
@@ -32,6 +32,7 @@
 
     <!-- Cars -->
     <color name="cars_primary_color_tvly">#003E74</color>
+    <color name="cars_unchecked_toggle_text_color_tvly">#B3FFFFFF</color>
     <color name="lx_primary_color_tvly">#003E74</color>
     <color name="lx_ripple_color_tvly">#53a0d3</color>
     <color name="lx_secondary_color_disabled_tvly">#032E4D</color>
