--- a/project/src/main/res/layout/include_accountv2_button.xml
+++ b/project/src/main/res/layout/include_accountv2_button.xml
@@ -110,7 +110,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
-            android:src="@drawable/ic_log_in"
+            android:src="?attr/skin_phoneCheckoutLoginLogoDrawable"
             android:scaleType="center"/>
 
         <LinearLayout
